<resources>
    <string name="app_name">DeliveryFood</string>
    <string name="login_edit_text_sdt_hint">Số điện thoại</string>
    <string name="login_edit_text_password_hint">Mật khẩu</string>
    <string name="login_button_dangnhap">Đăng Nhập</string>
    <string name="login_button_dangky">Đăng ký</string>
    <string name="app_name_with_spaces">CVL Delivery Now</string>
    <string name="str_name">Tên</string>
    <string name="str_phone_number">Số điện thoại</string>
    <string name="str_password">Password</string>
    <string name="str_email">Email</string>
    <string name="str_signup">ĐĂNG KÝ</string>
    <string name="str_ok">OK</string>
    <string name="str_missing_info">Bạn phải điền đủ thông tin</string>
    <string name="BASE_URL">https://fast-atoll-52540.herokuapp.com</string>
    <string name="favorite">Yêu thích</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Quán</string>
    <string name="title_bill">Tất cả đơn</string>
    <string name="title_current_bill">Đang xử lý</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_price">Tổng tiền:</string>
    <string name="bill">#Hoá đơn</string>
    <string name="bill_address">Địa chỉ</string>
    <string name="zero">0</string>
    <string name="confirm">Xác nhận</string>
    <string name="customer_addr">Địa chỉ khách:</string>
    <string name="restaurant_addr">Địa chỉ quán:</string>
    <string name="total">Cộng:</string>
    <string name="total_total">Tổng tiền:</string>
    <string name="ship">Phí ship:</string>
    <string name="detail">Chi tiết:</string>
    <string name="address">Địa chỉ:</string>
    <string name="comment_detail">Nội dung</string>
    <string name="comment_title">Tiêu đề</string>
    <string name="account">Tài khoản</string>
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="account_favorite">Yêu thích</string>
    <string name="bill_history">Lịch sử đơn hàng</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="address_book">Sổ địa chỉ</string>
    <string name="invite_friends">Giới thiệu bạn bè</string>
    <string name="feedback">Góp ý</string>
    <string name="setting">Cài đặt</string>
    <string name="account_name">Tên tài khoản</string>
    <string name="save_user_info">Lưu</string>
    <string name="select_avatar">Chọn</string>
    <string name="wrong_password_confirm">Xác nhận mật khẩu sai!</string>
    <string name="password_confirm">Nhập lại password</string>
</resources>
