<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_light_gray"
    tools:context=".MainActivity"
    tools:ignore="KeyboardInaccessibleWidget">
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:id="@+id/account_avatar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textStyle="bold"
            android:id="@+id/account_name"
            android:textSize="23sp"/>
    </LinearLayout>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:id="@+id/account_personal_information"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_favorite"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_history"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_book"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_friends"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_marginBottom="1dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="@color/color_black"
        android:background="@drawable/ripple"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:layout_marginBottom="1dp"/>
</LinearLayout>