<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_with_spaces"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="70dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#5E3425"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        android:weightSum="8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_name"
                android:textSize="23sp"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_phone_number"
                android:textSize="23sp"
                android:layout_marginVertical="5dp"
                android:textAlignment="center" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_password"
                android:textSize="23sp"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_email"
                android:textSize="23sp"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/str_signup"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"/>
    </LinearLayout>

</LinearLayout>