<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:textColor="@color/color_black"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/bill_id_text_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_address"
            android:layout_marginLeft="5dp"
            android:id="@+id/bill_address_text_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            android:textColor="@color/color_black"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/total_price"
            android:id="@+id/bill_price_text_view"/>
    </LinearLayout>
</android.support.v7.widget.CardView>